# two-generals

./: .gitignore  Cargo.toml  README.md  run-tests.sh
lean-adaptive-proofs/: AdaptiveBilateral.lean  Convergence.lean  RateSafety.lean  lake-manifest.json  lakefile.lean
lean4/: ExtremeLoss.lean  MainTheorem.lean  NetworkModel.lean  TimeoutMechanism.lean  TwoGenerals.lean  lake-manifest.json  lakefile.lean
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
python/: demo_tgp_traffic.py  requirements-dev.txt  requirements.txt  run_distributed_demo.sh
python/tgp/: __init__.py
rust/: Cargo.toml
rust/src/: lib.rs  lightweight.rs
wasm/: Cargo.toml
web/: animations.js  explainer.js  image-loading-test.js  index.html  network-simulation.js  network-simulator-sw.js  network-simulator.sw.js  package-lock.json  package.json  performance-optimization.js  performance.js  playwright.config.js  style.css  tabs.js  test-resources.js  test-tab2-integration.html  visualizer.js  why-it-works.js
web/components/: animation-controls.js  battlefield-3d.js  battlefield.js  index.js  infinite-regress.js  packet-visualizer.js  proof-merging.js  protocol-party.js  protocol-simulation.js  types.js
web/tests/: README.md  SERVICEWORKER_IMPLEMENTATION.md  TEST_SUMMARY.md  accessibility.test.js  integration.test.html  mobile-responsiveness.spec.js  performance-profiling.spec.js  run-tests.sh  serviceworker-network-simulation.test.html
