[package]
name = "two-generals-wasm"
version = "0.1.0"
authors = ["Riff Labs <wings@riff.cc>"]
edition = "2021"
license = "AGPL-3.0"
description = "WASM bindings for Two Generals Protocol"
repository = "https://github.com/rifflabs/two-generals-public"

[lib]
crate-type = ["cdylib"]

[dependencies]
two-generals = { path = "../rust" }
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.6.3"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.66", features = [
  "console",
  "MessageEvent",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSessionDescriptionInit",
  "RtcConfiguration",
  "RtcSdpType",
] }

[dependencies.web-sys]
version = "0.3.66"
features = [
  "console",
  "MessageEvent",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSessionDescriptionInit",
  "RtcConfiguration",
  "RtcSdpType",
]

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd"]